# valence-coprocessor-app

./: .env  .env.example  .example.env  .gitignore  Cargo.nix  Cargo.toml  MINIMAL_APP_CHANGES_FOR_VFS_NIX.md  Makefile  NIX_DEVELOPMENT_GUIDE.md  README.md  build-circuits.sh  env.example  flake.nix  justfile  valence.toml
.cargo/: config.toml
.github/workflows/: build-circuits.yml
apps/storage_proof/circuit/: Cargo.toml
apps/storage_proof/circuit/src/: lib.rs  main.rs
apps/storage_proof/controller/src/: lib.rs
apps/storage_proof/core/src/: consts.rs  lib.rs  proof.rs
artifacts/: coprocessor_outputs.toml  instantiation_outputs.toml  neutron_strategy_config.toml
circuits/storage_proof/circuit/: Cargo.toml  build.rs
circuits/storage_proof/circuit/src/: lib.rs
circuits/storage_proof/controller/: Cargo.toml
circuits/storage_proof/controller/src/: lib.rs  valence.rs
circuits/storage_proof/core/: Cargo.toml
circuits/storage_proof/core/src/: consts.rs  lib.rs  proof.rs
common/: Cargo.toml
common/src/: coprocessor_metadata.rs  lib.rs  shard_metadata.rs
coordinator/: Cargo.toml
coordinator/src/: engine.rs  main.rs  strategy.rs
core/: Cargo.toml
core/src/: circuit.rs  lib.rs  program.rs
crates/circuit/: Cargo.toml
crates/circuit/src/: helper.rs  lib.rs  main.rs
crates/controller/: Cargo.toml
crates/controller/src/: lib.rs  valence.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/domain/tests/: decoding.rs  ethereum.rs
crates/excluded-utils/: Cargo.toml
crates/excluded-utils/src/: lib.rs
crates/ibc-eureka/: Cargo.toml
crates/ibc-eureka/src/: lib.rs  types.rs
crates/light-client-utils/: Cargo.toml
crates/light-client-utils/src/: lib.rs
crates/program/: Cargo.toml
crates/program/src/: lib.rs  utils.rs
crates/program/tests/: ethereum.rs
crates/strategist/: Cargo.toml
crates/strategist/src/: clients.rs  config.rs  constants.rs  lib.rs  skip_api.rs  types.rs
crates/types/: Cargo.toml
crates/types/src/: ethereum.rs  lib.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs
deploy/: Cargo.toml
deploy/src/: main.rs
deploy/src/inputs/: neutron_inputs.toml
deploy/src/steps/: deploy_coprocessor_app.rs  instantiate_contracts.rs  read_input.rs  setup_authorizations.rs  write_output.rs
docker/coprocessor/: Dockerfile
docker/deploy/: Dockerfile  circuit.sh
docker/deploy/dummy-circuit/: Cargo.toml
docker/deploy/dummy-circuit/src/: main.rs
docs/: architecture.md  configuration.md  coordinator.md  environment.md  setup.md  technical_details.md  valence_interaction.md  workflow.md
e2e/: Cargo.toml  README.md  run_production_test.rs  test_production_sp1_proving_flow.rs
e2e/src/: clients.rs  constants.rs  lib.rs  tests.rs  utils.rs
lib/: Cargo.toml
lib/src/: lib.rs
nix/: sp1-rust.nix  sp1.nix
provisioner/: Cargo.toml
provisioner/src/: artifacts.rs  consts.rs  main.rs
provisioner/src/steps/: deploy_coprocessor_app.rs  instantiate_contracts.rs  mod.rs  read_input.rs  setup_authorizations.rs  write_output.rs
script/: Cargo.toml
script/src/: main.rs
script/tests/: wasm.rs
scripts/: build-wasm-wrapper.sh  deploy-to-service.sh  full-pipeline.sh  run-e2e-production-test.sh  setup-env.sh  test-end-to-end.sh  test-env-config.sh  test-lbtc-validation.sh
scripts/backup/: complete-workflow.sh  curl-deploy.sh  deploy.sh  install-cargo-prove.sh  run-deploy.sh
src/: lib.rs  main.rs
strategist/: Cargo.toml
strategist/src/: coordinator.rs  main.rs  strategy.rs
zkvm/: Cargo.toml
zkvm/circuit/: Cargo.toml
zkvm/circuit/src/: main.rs
zkvm/script/: Cargo.toml  build.rs
zkvm/script/src/: main.rs
