[package]
name = "coordinator"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
valence-domain-clients = { workspace = true }
valence-coordinator-sdk = { workspace = true }
dotenv = { workspace = true }
serde = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
common = { path = "../common" }
serde_json = { workspace = true }
cw20 = { workspace = true }
toml = { workspace = true }

storage-proof-core = { path = "../apps/storage_proof/core" }
