[package]
name = "valence-coprocessor-app-script"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
bincode = "1.3.3"
clap = { version = "4.5.37", features = ["derive"] }
base64 = "0.22.1"
hex = "0.4.3"
reqwest = { version = "0.12.15", features = ["json"] }
serde_json.workspace = true
sp1-sdk = "4.2.0"
tokio = { version = "1.44.2", features = ["full"] }
valence-coprocessor.workspace = true
