[package]
name = "strategist"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
valence-domain-clients = { workspace = true }
valence-coordinator-sdk = { workspace = true }
dotenv = { workspace = true }
serde = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
common = { path = "../common" }
serde_json = { workspace = true }
cw20 = { workspace = true }
toml = { workspace = true }

storage-proof-core = { path = "../circuits/storage_proof/core" }
