[package]
name = "valence-coprocessor-app-circuit"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "The Valence co-processor circuit definition."

[dependencies]
valence-coprocessor.workspace = true
types.workspace = true
serde_json.workspace = true
common-merkle-proofs.workspace = true
ethereum-merkle-proofs.workspace = true
num-bigint = { version = "0.4.6", default-features = false, features = [
    "serde",
] }
hex.workspace = true
alloy-primitives = { version = "0.8.25", default-features = false }
alloy-sol-types = { version = "0.8.25", default-features = false }
