[package]
name = "valence-coprocessor-app-circuit"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "The Valence co-processor circuit definition."

[dependencies]
valence-coprocessor.workspace = true
alloy-sol-types.workspace = true
alloy-primitives.workspace = true
