[package]
name = "valence-coprocessor-app-circuit"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "The Valence co-processor circuit definition"

[dependencies]
anyhow.workspace = true
sp1-zkvm = "=5.0.8"
valence-coprocessor.workspace = true
valence-coprocessor-sp1.workspace = true
