[package]
name = "valence-coprocessor-app-controller"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "The Valence co-processor program definition."

[dependencies]
anyhow.workspace = true
serde_json.workspace = true
valence-coprocessor.workspace = true
valence-coprocessor-wasm.workspace = true
hex.workspace = true

recursion-types = { git = "https://github.com/timewave-computer/valence-helios" }
sp1-verifier = { git = "https://github.com/timewave-computer/sp1", branch = "jonas/fix-4.1.7-syscall", default-features = false }
url = { version = "2.5", default-features = false }
valence-coprocessor-app-domain = { path = "../domain" }
types.workspace = true

[dev-dependencies]
alloy-primitives = { version = "0.8.25", default-features = false }
alloy-sol-types = { version = "0.8.23", default-features = false }
tokio = { version = "1.44.2", default-features = false, features = [
    "macros",
    "rt",
] }
