[package]
name              = "valence-coprocessor-app-controller"
version.workspace = true
edition.workspace = true
authors.workspace = true
description       = "The Valence co-processor controller definition."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow.workspace                   = true
serde_json.workspace               = true
valence-coprocessor.workspace      = true
valence-coprocessor-wasm.workspace = true
chrono                             = { version = "0.4.41", default-features = false }
