[package]
name = "valence-coprocessor-app-domain"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "The Valence co-processor domain definition."

[dependencies]
anyhow.workspace = true
serde_json.workspace = true
valence-coprocessor.workspace = true
valence-coprocessor-wasm.workspace = true
types.workspace = true
recursion-types = { git = "https://github.com/timewave-computer/valence-helios" }
sp1-verifier = { git = "https://github.com/timewave-computer/sp1", branch = "jonas/fix-4.1.7-syscall", default-features = false }
hex = { package = "const-hex", version = "1.14", default-features = false, features = [
    "alloc",
    "core-error",
] }
borsh.workspace = true
