[package]
name = "excluded-utils"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
valence-coprocessor.workspace = true
serde_json.workspace = true
anyhow.workspace = true
valence-coprocessor-app-domain = { path = "../domain" }
sp1-sdk = { git = "https://github.com/timewave-computer/sp1", branch = "jonas/fix-4.1.7-syscall", default-features = false, features = [
    "native-gnark",
] }
reqwest = { version = "0.11", features = ["json"], default-features = false }
tokio = { version = "1.44.2", default-features = false, features = [
    "macros",
    "rt",
] }
hex = "0.4"
