[package]
name = "excluded-utils"
version = "0.1.0"
edition = "2021"
authors = ["Timewave Computer"]
description = "Utilities for excluded operations"

[workspace]

[dependencies]
valence-coprocessor-app-domain = { path = "../domain" }
sp1-sdk = { git = "https://github.com/timewave-computer/sp1", branch = "jonas/fix-4.1.7-syscall", default-features = false, features = [
    "native-gnark",
] }
reqwest = { version = "0.11", features = ["json"], default-features = false }
tokio = { version = "1.44.2", default-features = false, features = [
    "macros",
    "rt",
] }
hex = "0.4"
anyhow = { version = "1.0.83", default-features = false }
valence-coprocessor = { git = "https://github.com/timewave-computer/valence-coprocessor.git", tag = "v0.1.13", default-features = false }
valence-coprocessor-wasm = { git = "https://github.com/timewave-computer/valence-coprocessor.git", tag = "v0.1.13", default-features = false }
serde_json = { version = "1.0.140", default-features = false, features = [
    "alloc",
] }
types = { path = "../types" }
common-merkle-proofs = { package = "common", git = "https://github.com/timewave-computer/zk-merkle-proofs", default-features = false }
ethereum-merkle-proofs = { package = "ethereum", git = "https://github.com/timewave-computer/zk-merkle-proofs", default-features = false }
serde = { version = "1", features = ["derive"] }
num-bigint = { version = "0.4.6", default-features = false, features = [
    "serde",
] }
alloy-primitives = { version = "0.8.25", default-features = false, features = [
    "rlp",
] }
alloy-rlp = { version = "0.3.12", default-features = false }
alloy-sol-types = { version = "0.8.25", default-features = false }
