[package]
name = "light-client-utils"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
valence-coprocessor.workspace = true
serde_json.workspace = true
anyhow.workspace = true
valence-coprocessor-app-domain = { path = "../domain" }
sp1-sdk.workspace = true
