[package]
name = "valence-coprocessor-app-program"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "The Valence co-processor program definition."

[dependencies]
anyhow.workspace = true
serde_json.workspace = true
valence-coprocessor.workspace = true
valence-coprocessor-wasm.workspace = true
hex.workspace = true

recursion-types = { git = "https://github.com/timewave-computer/valence-helios" }
#sp1-sdk = { git = "https://github.com/timewave-computer/sp1", branch = "jonas/fix-4.1.7-syscall", features = [
#    "native-gnark",
#] }
sp1-verifier = { git = "https://github.com/timewave-computer/sp1", branch = "jonas/fix-4.1.7-syscall" }
#borsh = { version = "1.5.5", features = ["derive"] }
tokio = { version = "1.44.2", default-features = false, features = [
    "macros",
    "rt",
] }
#reqwest-wasm = { version = "0.11", default-features = false }
url = { version = "2.5" }
valence-coprocessor-app-domain = { path = "../domain" }
types = { path = "../types" }

[dev-dependencies]
alloy-primitives = { version = "0.8.25" }
alloy-sol-types = { version = "0.8.23" }
