[package]
name = "strategist"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
# HTTP client for Skip API
reqwest = { version = "0.12", features = ["json"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow.workspace = true
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Crypto for hashing
sha3 = "0.10"
hex = "0.4" 