[package]
name = "types"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
valence-coprocessor.workspace = true
num-bigint = { version = "0.4.6", default-features = false, features = [
    "serde",
] }
anyhow.workspace = true
alloy-primitives = { version = "0.8.25", default-features = false, features = [
    "rlp",
] }
alloy-rlp = { version = "0.3.12", default-features = false }
alloy-trie = { version = "0.8.1", default-features = false }
